--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: my_stackable_popup_menu
-description: A new Flutter package project.
-version: 0.0.1
-homepage: null
+description: Popup Menu
+version: 0.0.2
+homepage: https://github.com/wxxedu/my_stackable_popup_menu
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
